--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ description = "Single collect run coordinator."
 requires-python = ">=3.9"
 classifiers = [ "Programming Language :: Python :: 3" ]
 readme = {file="README.md", content-type="text/markdown"}
+license = { file = "LICENSE" }
+
 
 dependencies = [ "resotolib", "resotocore", "resotoworker", "fixcloudutils[arango, redis]" ]
 
