--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,12 @@ readme = {file="README.md", content-type="text/markdown"}
 license = { file = "LICENSE" }
 
 
-dependencies = [ "resotolib", "resotocore", "resotoworker", "fixcloudutils[arango, redis]" ]
+dependencies = [
+    "resotolib",
+    "resotocore",
+    "resotoworker",
+    "fixcloudutils[arango, redis] >= 1.7.1"
+]
 
 [project.optional-dependencies]
 
