[feat] Create an additional random string.

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -40,6 +40,12 @@ jobs:
           echo ${{ steps.platform.outputs.targets }}
           echo ${{ steps.platform.outputs.latest }}
 
+      - name: Generate random alphanumeric string
+        id: random_string
+        run: |
+          RANDOM_STRING=$(cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 7 | head -n 1)
+          echo "::set-output name=random_string::${RANDOM_STRING}"
+
       - name: Docker metadata
         id: metadata
         uses: docker/metadata-action@v4
@@ -92,7 +98,7 @@ jobs:
           file: ./Dockerfile
           platforms: ${{ steps.platform.outputs.targets }}
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.metadata.outputs.tags }}
+          tags: ${{ steps.metadata.outputs.tags }},"someengineering/fix-collect-single:${{ steps.random_string.outputs.random_string }}"
           labels: ${{ steps.metadata.outputs.labels }}
           provenance: false # Temporary workaround for https://github.com/docker/buildx/issues/1533
 
@@ -112,12 +118,9 @@ jobs:
           git config --global user.email "ci@some.engineering"
           git config --global user.name "Some CI"
           git clone "https://$GITHUB_TOKEN@github.com/someengineering/setup-infra.git"
-          git_sha="${{ github.sha }}"
-          short_sha="${git_sha:0:7}"
-          echo "Use short SHA: $short_sha"
           # update the tag
           cd setup-infra
-          yq eval "(.configMapGenerator[] | select(.name == \"fix-collect-coordinator-versions\") | .literals)[] |= sub(\"FIX_COLLECT_SINGLE_VERSION=.*\", \"FIX_COLLECT_SINGLE_VERSION=${short_sha}\")" -i argocd/envs/dev/fix-collect-coordinator/kustomization.yaml
+          yq eval "(.configMapGenerator[] | select(.name == \"fix-collect-coordinator-versions\") | .literals)[] |= sub(\"FIX_COLLECT_SINGLE_VERSION=.*\", \"FIX_COLLECT_SINGLE_VERSION=${{ steps.random_string.outputs.random_string }}\")" -i argocd/envs/dev/fix-collect-coordinator/kustomization.yaml
           git add .
           git commit -m "Bump fix-collect-single on dev to ${short_sha}" 
           git push origin main
