print the result

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -44,6 +44,7 @@ jobs:
         id: full_hash
         run: |
           RESOTO_SHORT_SHA=$(curl -s -H "Authorization: token ${{ secrets.SOME_CI_PAT }}" https://api.github.com/repos/someengineering/resoto/git/ref/heads/main" | jq -r '.object.sha[:7]')
+          echo "Resulting combined hash is ${RESOTO_SHORT_SHA}_${GITHUB_SHA::7}"
           echo "full_hash=${RESOTO_SHORT_SHA}_${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
 
       - name: Docker metadata
