--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,9 @@ include_package_data = True
 # we use __file__ --> move to pkg_resources.resource_stream
 zip_safe = False
 
+[options.package_data]
+* = *.yaml
+
 [flake8]
 max-line-length = 120
 exclude = .git,.tox,__pycache__,.idea,.pytest_cache,docs
