[chore] Resoto -> Fix (#16)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,13 @@ license = { file = "LICENSE" }
 
 
 dependencies = [
-    "resotolib",
-    "resotocore",
-    "resotoworker",
-    "fixcloudutils[arango, redis] >= 1.11.0"
+    "fixinventoryclient>=2",
+    # TODO: remove the version pinning once fixinventory 4.0.0 is released
+    "fixinventorylib==4.0.0a2",
+    "fixinventorycore==4.0.0a2",
+    "fixinventoryworker==4.0.0a2",
+    "fixcloudutils[arango, redis] >= 1.11.0",
+    "urllib3 <= 2" # boto3 requires urllib3 < 2.0.0
 ]
 
 [project.optional-dependencies]
@@ -31,6 +34,9 @@ test = [
     "pytest-asyncio",
     "pytest-cov",
     "tox",
+    "types_PyYAML",
+    "types-requests",
+    "types-setuptools"
 ]
 
 
