--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ zip_safe = False
 [flake8]
 max-line-length = 120
 exclude = .git,.tox,__pycache__,.idea,.pytest_cache,docs
-application-import-names = resotocore tests
+application-import-names = collect-single tests
 ignore = N818, W503, E203
 
 [tool:pytest]
@@ -23,8 +23,3 @@ log_level=info
 
 [mypy]
 ignore_missing_imports = True
-
-[coverage:run]
-concurrency = multiprocessing
-# omit source files from resotolib
-omit = */resotolib/*
