--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,8 @@ asyncio_mode= auto
 [testenv]
 usedevelop = true
 deps = -e ".[test]"
+# TODO: remove the next line when there is a final release
+install_command = pip install --pre {opts} {packages}
 # until this is fixed: https://github.com/pypa/setuptools/issues/3518
 setenv =
     SETUPTOOLS_ENABLE_FEATURES = legacy-editable
