[feat] Add account_score timeseries

--- a/collect_single/metrics.yaml
+++ b/collect_single/metrics.yaml
@@ -111,3 +111,8 @@ instances_total:
       instance_status as status: sum(1) as instances_total
     ): is(instance)
 
+account_score:
+  description: Account score by account and cloud
+  search: |
+    aggregate( id as account_id, /ancestors.cloud.reported.id as cloud_id: avg(/metadata.score) as score ): 
+    is(account) and /metadata.score!=null
