--- a/collect_single/metrics.yaml
+++ b/collect_single/metrics.yaml
@@ -21,7 +21,7 @@ cores_total:
   search: |
     aggregate(
       /ancestors.cloud.reported.name as cloud, 
-      /ancestors.account.reported.name as account,
+      /ancestors.account.reported.id as account_id,
       /ancestors.region.reported.name as region, instance_type as type: sum(instance_cores) as cores_total
     ): is(instance) and instance_status == running
 
@@ -30,7 +30,7 @@ memory_bytes:
   search: |
     aggregate(
       /ancestors.cloud.reported.name as cloud, 
-      /ancestors.account.reported.name as account, 
+      /ancestors.account.reported.id as account_id, 
       /ancestors.region.reported.name as region, 
       instance_type as type: sum(instance_memory * 1024 * 1024 * 1024) as memory_bytes
     ): is(instance) and instance_status == running
@@ -40,7 +40,7 @@ volume_bytes:
   search: |
     aggregate(
       /ancestors.cloud.reported.name as cloud, 
-      /ancestors.account.reported.name as account, 
+      /ancestors.account.reported.id as account_id, 
       /ancestors.region.reported.name as region, 
       volume_type as type, 
       volume_status as status: sum(volume_size * 1024 * 1024 * 1024) as volume_bytes
@@ -51,7 +51,7 @@ databases_bytes:
   search: |
     aggregate(
       /ancestors.cloud.reported.name as cloud, 
-      /ancestors.account.reported.name as account, 
+      /ancestors.account.reported.id as account_id, 
       /ancestors.region.reported.name as region, 
       db_type as type, 
       instance_type as instance_type: sum(volume_size * 1024 * 1024 * 1024) as databases_bytes
@@ -62,7 +62,7 @@ instances_hourly_cost_estimate:
   search: |
     aggregate(
       /ancestors.cloud.reported.name as cloud, 
-      /ancestors.account.reported.name as account, 
+      /ancestors.account.reported.id as account_id, 
       /ancestors.region.reported.name as region, 
       instance_type as type: sum(/ancestors.instance_type.reported.ondemand_cost) as instances_hourly_cost_estimate
     ): is(instance) and instance_status == running
@@ -72,7 +72,7 @@ volumes_monthly_cost_estimate:
   search: |
     aggregate(
       /ancestors.cloud.reported.name as cloud, 
-      /ancestors.account.reported.name as account, 
+      /ancestors.account.reported.id as account_id, 
       /ancestors.region.reported.name as region, 
       volume_type as type, 
       volume_status as status: sum(/ancestors.volume_type.reported.ondemand_cost) as volumes_monthly_cost_estimate
@@ -83,7 +83,7 @@ databases_total:
   search: |
     aggregate(
       /ancestors.cloud.reported.name as cloud, 
-      /ancestors.account.reported.name as account, 
+      /ancestors.account.reported.id as account_id, 
       /ancestors.region.reported.name as region, 
       db_type as type, 
       instance_type as instance_type: sum(1) as databases_total
@@ -94,7 +94,7 @@ volumes_total:
   search: |
     aggregate(
       /ancestors.cloud.reported.name as cloud, 
-      /ancestors.account.reported.name as account, 
+      /ancestors.account.reported.id as account_id, 
       /ancestors.region.reported.name as region, 
       volume_type as type, 
       volume_status as status: sum(1) as volumes_total
@@ -105,7 +105,7 @@ instances_total:
   search: |
     aggregate(
       /ancestors.cloud.reported.name as cloud, 
-      /ancestors.account.reported.name as account, 
+      /ancestors.account.reported.id as account_id, 
       /ancestors.region.reported.name as region, 
       instance_type as type,
       instance_status as status: sum(1) as instances_total
@@ -114,15 +114,17 @@ instances_total:
 account_score:
   description: Account score by account and cloud
   search: |
-    aggregate( id as account_id, /ancestors.cloud.reported.id as cloud_id: avg(/metadata.score) as score ): 
-    is(account) and /metadata.score!=null
+    aggregate( 
+      id as account_id, 
+      /ancestors.cloud.reported.id as cloud_id: avg(/metadata.score) as score 
+    ): is(account) and /metadata.score!=null
 
 buckets_size_bytes:
   description: Size of Buckets in bytes by cloud, account, region and type
   search: |
     aggregate(
       /ancestors.cloud.reported.name as cloud, 
-      /ancestors.account.reported.name as account, 
+      /ancestors.account.reported.id as account_id, 
       bucket_location as region, 
       name as name: sum(/usage.bucket_size_bytes.avg) as bucket_size_bytes
     ): is(bucket)
@@ -132,7 +134,7 @@ buckets_objects_total:
   search: |
     aggregate(
       /ancestors.cloud.reported.name as cloud, 
-      /ancestors.account.reported.name as account, 
+      /ancestors.account.reported.id as account_id, 
       bucket_location as region, 
       name as name: sum(/usage.number_of_objects_count.avg) as buckets_objects_total
     ): is(bucket)
